# spice-make

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: Deps.cmake  Metadata.hpp.in
docs/format/: pkg.md
include/psm/arg/: Command.hpp
include/psm/inter/: PkgGenerator.hpp
include/psm/io/: PkgFile.hpp
include/psm/pkg/: SpiceMakePkg.hpp
include/psm/util/: Checksum.hpp  Reader.hpp
src/: CMakeLists.txt  Main.cpp
src/arg/: CMakeLists.txt  Command.cpp
src/io/: CMakeLists.txt  PkgFile.cpp
src/pkg/: CMakeLists.txt  SpiceMakePkg.cpp
src/util/: CMakeLists.txt  Checksum.cpp  Reader.cpp
